--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,27 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1ffe6131",
+   "execution_count": 61,
+   "id": "f1ce3d37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Working directory set to: C:\\End-to-end-ML-projects-with-ML-Flow\n"
+     ]
+    }
+   ],
    "source": [
-    "import os"
+    "import os\n",
+    "\n",
+    "# Set working directory to your project root\n",
+    "os.chdir(\"C:/End-to-end-ML-projects-with-ML-Flow\")\n",
+    "print(\"✅ Working directory set to:\", os.getcwd())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "615afa04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\End-to-end-ML-projects-with-ML-Flow\\\\research'"
+       "'C:\\\\End-to-end-ML-projects-with-ML-Flow'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,38 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8cd9e3aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f894680c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\End-to-end-ML-projects-with-ML-Flow'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "id": "543f0e46",
    "metadata": {},
    "outputs": [],
@@ -74,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "id": "85c83caa",
    "metadata": {},
    "outputs": [],
@@ -84,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "id": "5bf4fa1b",
    "metadata": {},
    "outputs": [],
@@ -93,13 +74,13 @@
     "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
     "    source_URL: str\n",
-    "    local_data_path: Path\n",
+    "    local_data_file: Path\n",
     "    unzip_dir: Path\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "id": "b9d8eed6",
    "metadata": {},
    "outputs": [],
@@ -109,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "3b839a09",
    "metadata": {},
    "outputs": [],
@@ -119,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3d3b679b",
    "metadata": {},
    "outputs": [],
@@ -156,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "492cb17e",
    "metadata": {},
    "outputs": [],
@@ -170,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "id": "4d5c18b4",
    "metadata": {},
    "outputs": [],
@@ -208,11 +189,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "a40e7c01",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-06 13:18:12,898: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-06-06 13:18:12,902: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-06-06 13:18:12,902: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-06-06 13:18:12,906: INFO: common: created directory at: artifacts]\n",
+      "[2025-06-06 13:18:12,907: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-06-06 13:18:14,046: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 23329\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"c69888a4ae59bc5a893392785a938ccd4937981c06ba8a9d6a21aa52b4ab5b6e\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: BCB6:1964FB:2C42A3:60197A:68429D3D\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Fri, 06 Jun 2025 07:48:13 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-bom4746-BOM\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1749196094.575965,VS0,VE368\n",
+      "Vary: Authorization,Accept-Encoding\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 0ca9261c478c8aa4ca1db0217df33aef15a71008\n",
+      "Expires: Fri, 06 Jun 2025 07:53:13 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "3bb9f933",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\End-to-end-ML-projects-with-ML-Flow'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
   }
  ],
  "metadata": {
