--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -2,27 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "id": "9e187c9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Working directory set to: C:\\End-to-end-ML-projects-with-ML-Flow\n"
+     ]
+    }
+   ],
    "source": [
-    "import os"
+    "import os\n",
+    "\n",
+    "# Set working directory to your project root\n",
+    "os.chdir(\"C:/End-to-end-ML-projects-with-ML-Flow\")\n",
+    "print(\"✅ Working directory set to:\", os.getcwd())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "id": "6286f040",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\End-to-end-ML-projects-with-ML-Flow\\\\research'"
+       "'C:\\\\End-to-end-ML-projects-with-ML-Flow'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,38 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b5c7c3fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "01d0c5e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\End-to-end-ML-projects-with-ML-Flow'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 89,
    "id": "774a33c0",
    "metadata": {},
    "outputs": [],
@@ -74,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 90,
    "id": "c8bf000d",
    "metadata": {},
    "outputs": [
@@ -216,7 +197,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 91,
    "id": "e5b88a2b",
    "metadata": {},
    "outputs": [
@@ -264,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
    "id": "eea2eee4",
    "metadata": {},
    "outputs": [
@@ -274,7 +255,7 @@
        "(1599, 12)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "id": "c4b75c0d",
    "metadata": {},
    "outputs": [],
@@ -295,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "id": "9cf7d663",
    "metadata": {},
    "outputs": [],
@@ -305,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "id": "61fe28c3",
    "metadata": {},
    "outputs": [],
@@ -320,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 102,
    "id": "2a4a997f",
    "metadata": {},
    "outputs": [],
@@ -331,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 103,
    "id": "fbb08c15",
    "metadata": {},
    "outputs": [],
@@ -367,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 116,
    "id": "7b96bd58",
    "metadata": {},
    "outputs": [],
@@ -378,50 +359,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 117,
    "id": "1eeb9244",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataValiadtion:\n",
+    "import pandas as pd\n",
+    "\n",
+    "class DataValidation:\n",
     "    def __init__(self, config: DataValidationConfig):\n",
     "        self.config = config\n",
     "\n",
-    "\n",
-    "    def validate_all_columns(self)-> bool:\n",
+    "    def validate_all_columns(self) -> bool:\n",
     "        try:\n",
-    "            validation_status = None\n",
-    "\n",
+    "            # Load data and schema\n",
     "            data = pd.read_csv(self.config.unzip_data_dir)\n",
-    "            all_cols = list(data.columns)\n",
+    "            all_schema = self.config.all_schema  # dict: {col_name: dtype}\n",
+    "            schema_cols = set(all_schema.keys())\n",
+    "            data_cols = set(data.columns)\n",
     "\n",
-    "            all_schema = self.config.all_schema.keys()\n",
+    "            mismatched_columns = []\n",
     "\n",
-    "            \n",
-    "            for col in all_cols:\n",
-    "                if col not in all_schema:\n",
-    "                    validation_status = False\n",
-    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
-    "                else:\n",
-    "                    validation_status = True\n",
-    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "            # 1. Check for missing and extra columns\n",
+    "            missing_cols = schema_cols - data_cols\n",
+    "            extra_cols = data_cols - schema_cols\n",
+    "\n",
+    "            if missing_cols:\n",
+    "                for col in missing_cols:\n",
+    "                    mismatched_columns.append(f\"Missing expected column: {col}\")\n",
+    "\n",
+    "            if extra_cols:\n",
+    "                for col in extra_cols:\n",
+    "                    mismatched_columns.append(f\"Unexpected column: {col}\")\n",
+    "\n",
+    "            # 2. Check data types for matching columns\n",
+    "            for col in schema_cols & data_cols:\n",
+    "                actual_dtype = str(data[col].dtype)\n",
+    "                expected_dtype = all_schema[col]\n",
+    "                if actual_dtype != expected_dtype:\n",
+    "                    mismatched_columns.append(\n",
+    "                        f\"Column '{col}' has dtype '{actual_dtype}', expected '{expected_dtype}'\"\n",
+    "                    )\n",
+    "\n",
+    "            # 3. Decide final validation status\n",
+    "            validation_status = len(mismatched_columns) == 0\n",
+    "\n",
+    "            # 4. Write results to status file\n",
+    "            with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                f.write(f\"Validation status: {validation_status}\\n\")\n",
+    "                if not validation_status:\n",
+    "                    f.write(\"Issues found:\\n\")\n",
+    "                    for issue in mismatched_columns:\n",
+    "                        f.write(f\"- {issue}\\n\")\n",
     "\n",
     "            return validation_status\n",
-    "        \n",
+    "\n",
     "        except Exception as e:\n",
-    "            raise e\n",
-    "\n"
+    "            raise e\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "ccf31034",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-09 13:39:43,744: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-06-09 13:39:43,748: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-06-09 13:39:43,751: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-06-09 13:39:43,752: INFO: common: created directory at: artifacts]\n",
+      "[2025-06-09 13:39:43,754: INFO: common: created directory at: artifacts/data_validation]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_validation_config = config.get_data_validation_config()\n",
+    "    data_validation = DataValidation(config=data_validation_config)\n",
+    "    data_validation.validate_all_columns()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
   }
  ],
  "metadata": {
