Data Transformation pipeline setup done

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "f1ce3d37",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "615afa04",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "'C:\\\\End-to-end-ML-projects-with-ML-Flow'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "543f0e46",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "85c83caa",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "5bf4fa1b",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "b9d8eed6",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "id": "3b839a09",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3d3b679b",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "492cb17e",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "4d5c18b4",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "id": "a40e7c01",
    "metadata": {},
    "outputs": [
@@ -197,12 +197,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-06-06 13:18:12,898: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-06-06 13:18:12,902: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-06-06 13:18:12,902: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-06-06 13:18:12,906: INFO: common: created directory at: artifacts]\n",
-      "[2025-06-06 13:18:12,907: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-06-06 13:18:14,046: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2025-06-10 10:45:37,123: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-06-10 10:45:37,125: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-06-10 10:45:37,127: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-06-10 10:45:37,129: INFO: common: created directory at: artifacts]\n",
+      "[2025-06-10 10:45:37,131: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-06-10 10:45:38,071: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 23329\n",
       "Cache-Control: max-age=300\n",
@@ -213,19 +213,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: BCB6:1964FB:2C42A3:60197A:68429D3D\n",
+      "X-GitHub-Request-Id: 9FA5:39CE07:EE8B2:22D185:6847BB24\n",
       "Accept-Ranges: bytes\n",
-      "Date: Fri, 06 Jun 2025 07:48:13 GMT\n",
+      "Date: Tue, 10 Jun 2025 05:15:38 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-bom4746-BOM\n",
-      "X-Cache: MISS\n",
+      "X-Served-By: cache-bom4747-BOM\n",
+      "X-Cache: HIT\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1749196094.575965,VS0,VE368\n",
+      "X-Timer: S1749532538.714470,VS0,VE365\n",
       "Vary: Authorization,Accept-Encoding\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 0ca9261c478c8aa4ca1db0217df33aef15a71008\n",
-      "Expires: Fri, 06 Jun 2025 07:53:13 GMT\n",
+      "X-Fastly-Request-ID: a66feb376ac74fa26ebd42221dda4dfe274c37c3\n",
+      "Expires: Tue, 10 Jun 2025 05:20:38 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
