--- a/research/05_model_evalution.ipynb
+++ b/research/05_model_evalution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "b8c3cd3c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "7227b423",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "95fd33fc",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "'C:\\\\End-to-end-ML-projects-with-ML-Flow'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,19 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "36a0d0da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MLFLOW_TRACKING_URI\"] = \"https://dagshub.com/manasvideshmukh/End-to-end-ML-projects-with-ML-Flow.mlflow\"\n",
-    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]= \"manasvideshmukh\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]= \"5552cc0f6b58a87d658c319b982ec769977133e3\""
+    "# os.environ[\"MLFLOW_TRACKING_URI\"] = \"https://dagshub.com/manasvideshmukh/End-to-end-ML-projects-with-ML-Flow.mlflow\"\n",
+    "# os.environ[\"MLFLOW_TRACKING_USERNAME\"]= \"manasvideshmukh\"\n",
+    "# os.environ[\"MLFLOW_TRACKING_PASSWORD\"]= \"5552cc0f6b58a87d658c319b982ec769977133e3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "f14df54a",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "eaec3d7d",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "2e164979",
    "metadata": {},
    "outputs": [],
@@ -140,10 +140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "42526ceb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\End-to-end-ML-projects-with-ML-Flow\\venv\\Lib\\site-packages\\mlflow\\utils\\requirements_utils.py:20: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources  # noqa: TID251\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "ef281f2e",
    "metadata": {},
    "outputs": [],
@@ -222,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "4f8cff97",
    "metadata": {},
    "outputs": [
@@ -230,12 +239,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-06-10 17:08:46,195: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-06-10 17:08:46,197: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-06-10 17:08:46,199: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-06-10 17:08:46,200: INFO: common: created directory at: artifacts]\n",
-      "[2025-06-10 17:08:46,201: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2025-06-10 17:08:46,590: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
+      "[2025-06-13 12:25:03,061: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-06-13 12:25:03,061: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-06-13 12:25:03,072: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-06-13 12:25:03,073: INFO: common: created directory at: artifacts]\n",
+      "[2025-06-13 12:25:03,075: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2025-06-13 12:25:04,038: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
      ]
     },
     {
@@ -243,8 +252,8 @@
      "output_type": "stream",
      "text": [
       "Registered model 'ElasticnetModel' already exists. Creating a new version of this model...\n",
-      "2025/06/10 17:08:59 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: ElasticnetModel, version 2\n",
-      "Created version '2' of model 'ElasticnetModel'.\n"
+      "2025/06/13 12:25:20 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: ElasticnetModel, version 12\n",
+      "Created version '12' of model 'ElasticnetModel'.\n"
      ]
     }
    ],
